<resources>
    <string name="app_name">pmdm_t4_01</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_navegador_web">Hello second fragment. Arg: %1$s</string>
    <string name="action_marcador_llamado">Hello second fragment. Arg: %1$s</string>
    <string name="action_llamado_numero">Hello second fragment. Arg: %1$s</string>
    <string name="action_llamada">Hello second fragment. Arg: %1$s</string>
    <string name="action_sms">Hello second fragment. Arg: %1$s</string>
    <string name="action_sms_compartir">Hello second fragment. Arg: %1$s</string>

</resources>